--- a/style.css
+++ b/style.css
@@ -103,10 +103,12 @@ body {
 #CSAW {
   background-color: #fffefe;
   transform: translate(-120px, -260px) rotate(0deg); 
+}
 
 #Fresque {
   background-color: #fffefe;
   transform: translate(130px, -200px) rotate(0deg); 
+}
 
 #Semaine {
   background-color: #fffefe;
