--- a/style.css
+++ b/style.css
@@ -27,12 +27,13 @@ body {
   flex-direction: column; /* Stack the image and text vertically */
   justify-content: center;
   align-items: center;
-  background-color: #77dd77;
+  --distance: 120px;
 }
 
 .bubble img {
   /* Adjust the image size as needed */
-  height: 100px;
+  max-width: 70%;
+  max-height: 60%;
   object-fit: contain;
 }
 
@@ -41,7 +42,7 @@ body {
 }
 
 .bubble:hover {
-  background-color: #39ff15 !important; /* Change to the highlight color of your choice */
+  background-color: #39ff15 !important;
   transition: background-color 0.2s ease;
   z-index: 2;
 }
@@ -102,194 +103,288 @@ body {
   z-index: 2;
 }
 
+/*first category*/
+
 #bubble1 {
   background-color: #b2fba5;
   transform: translate(0, -200px) rotate(0deg);
+  --nb_res: 5;
 }
-
-#bubble2 {
-  background-color: #a6e999;
-  transform: translate(190.21px, -61.80px) rotate(0deg);
-}
-
-#bubble3 {
-  background-color: #99d88e;
-  transform: translate(-190.21px, -61.80px) rotate(0deg);
-}
-
-#bubble4 {
-  background-color: #8dc682;
-  transform: translate(-117.56px, 161.80px) rotate(0deg);
-}
-
-#bubble5 {
-  background-color: #80b577;
-  transform: translate(117.56px, 161.80px) rotate(0deg);
-}
-
-/*first category*/
 
 #epflcourses {
   background-color: #b2fba5;
-  transform: translate(0px, -325px) rotate(0deg); 
+  --xcoord: calc(cos(90deg)*var(--distance));
+  --ycoord: calc(-1*sin(90deg)*var(--distance));
+  transform: translate(var(--xcoord),var(--ycoord)) rotate(0deg); 
 }
 
 #Fresque {
   background-color: #b2fba5;
-  transform: translate(62.5px, -308.25px) rotate(0deg); 
+  --xcoord: calc(cos(60deg)*var(--distance));
+  --ycoord: calc(-1*sin(60deg)*var(--distance));
+  transform: translate(var(--xcoord),var(--ycoord)) rotate(0deg);
 }
 
 #CSAW {
   background-color: #b2fba5;
-  transform: translate(108.25px, -262.5px) rotate(0deg); 
+  --xcoord: calc(cos(30deg)*var(--distance));
+  --ycoord: calc(-1*sin(30deg)*var(--distance));
+  transform: translate(var(--xcoord),var(--ycoord)) rotate(0deg);
 }
 
 #Semaine {
   background-color: #b2fba5;
-  transform: translate(-62.5px, -308.25px) rotate(0deg);
+  --xcoord: calc(cos(120deg)*var(--distance));
+  --ycoord: calc(-1*sin(120deg)*var(--distance));
+  transform: translate(var(--xcoord),var(--ycoord)) rotate(0deg);
 }
 
 #Canard {
   background-color: #b2fba5;
-  transform: translate(-108.25px, -262.5px) rotate(0deg); 
+  --xcoord: calc(cos(150deg)*var(--distance));
+  --ycoord: calc(-1*sin(150deg)*var(--distance));
+  transform: translate(var(--xcoord),var(--ycoord)) rotate(0deg);
 }
 
 /*Second category*/
 
-#Debouches {
+#bubble2 {
   background-color: #a6e999;
-  transform: translate(315.21px, -61.8px) rotate(0deg); 
+  transform: translate(190.21px, -61.80px) rotate(0deg);
+  --nb_res: 11;
+}
+
+#Debouches {
+  --i: 0;
+  background-color: #a6e999;
+  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res))*var(--distance));
+  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res))*var(--distance));
+  transform: translate(var(--xcoord), var(--ycoord)) rotate(0deg); 
 }
 
 #Carriere {
+  --i: 1;
   background-color: #a6e999;
-  transform: translate(295.40px, -132.33px) rotate(0deg); 
+  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res))*var(--distance));
+  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res))*var(--distance));
+  transform: translate(var(--xcoord), var(--ycoord)) rotate(0deg); 
 }
 
 #Velo {
+  --i: 2;
   background-color: #a6e999;
-  transform: translate(242.05px, -178.55px) rotate(0deg); 
+  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res))*var(--distance));
+  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res))*var(--distance));
+  transform: translate(var(--xcoord), var(--ycoord)) rotate(0deg);
 }
 
 #Fix {
+  --i: 3;
   background-color: #a6e999;
-  transform: translate(172.38px, -188.52px) rotate(0deg); 
+  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res))*var(--distance));
+  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res))*var(--distance));
+  transform: translate(var(--xcoord), var(--ycoord)) rotate(0deg);
 }
 
 #Smart {
+  --i: 4;
   background-color: #a6e999;
-  transform: translate(108.37px, -159.28px) rotate(0deg); 
+  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res))*var(--distance));
+  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res))*var(--distance));
+  transform: translate(var(--xcoord), var(--ycoord)) rotate(0deg);
 }
 
 #Biblio {
+  --i: 5;
   background-color: #a6e999;
-  transform: translate(70.30px, -100.09px) rotate(0deg); 
+  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res))*var(--distance));
+  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res))*var(--distance));
+  transform: translate(var(--xcoord), var(--ycoord)) rotate(0deg);
 }
 
 #Meubleco {
+  --i: 6;
   background-color: #a6e999;
-  transform: translate(70.4px, -29.51px) rotate(0deg); 
+  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res))*var(--distance));
+  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res))*var(--distance));
+  transform: translate(var(--xcoord), var(--ycoord)) rotate(0deg);
 }
 
 #Vorace {
+  --i: 7;
   background-color: #a6e999;
-  transform: translate(108.37px, 29.68px) rotate(0deg); 
+  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res))*var(--distance));
+  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res))*var(--distance));
+  transform: translate(var(--xcoord), var(--ycoord)) rotate(0deg);
 }
 
 #Castor {
+  --i: 8;
   background-color: #a6e999;
-  transform: translate(172.38px, 58.92px) rotate(0deg); 
+  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res))*var(--distance));
+  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res))*var(--distance));
+  transform: translate(var(--xcoord), var(--ycoord)) rotate(0deg);
 }
 
 #Marche {
+  --i: 9;
   background-color: #a6e999;
-  transform: translate(242.40px, 48.95px) rotate(0deg); 
+  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res))*var(--distance));
+  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res))*var(--distance));
+  transform: translate(var(--xcoord), var(--ycoord)) rotate(0deg);
 }
 
 #Coaching {
-  background-color: #b2fba5;
-  transform: translate(295.40px, 2.73px) rotate(0deg);
+  --i: 10;
+  background-color: #a6e999;
+  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res))*var(--distance));
+  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res))*var(--distance));
+  transform: translate(var(--xcoord), var(--ycoord)) rotate(0deg);
 }
 
 /*third category*/
 
-#Convergeance {
+#bubble3 {
   background-color: #99d88e;
-  transform: translate(-315.21px, -61.8px) rotate(0deg); 
+  transform: translate(-190.21px, -61.80px) rotate(0deg);
+  --nb_res: 11;
+}
+
+#Convergeance {
+  --i: 0;
+  background-color: #99d88e;
+  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res))*var(--distance));
+  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res))*var(--distance));
+  transform: translate(var(--xcoord), var(--ycoord)) rotate(0deg);
 }
 
 #Zero {
+  --i: 1;
   background-color: #99d88e;
-  transform: translate(-295.40px, -132.33px) rotate(0deg); 
+  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res))*var(--distance));
+  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res))*var(--distance));
+  transform: translate(var(--xcoord), var(--ycoord)) rotate(0deg);
 }
 
 #Ingenieur {
+  --i: 2;
   background-color: #99d88e;
-  transform: translate(-242.05px, -178.55px) rotate(0deg); 
+  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res))*var(--distance));
+  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res))*var(--distance));
+  transform: translate(var(--xcoord), var(--ycoord)) rotate(0deg);
 }
 
 #Unipoly {
+  --i: 3;
   background-color: #99d88e;
-  transform: translate(-172.38px, -188.52px) rotate(0deg); 
+  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res))*var(--distance));
+  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res))*var(--distance));
+  transform: translate(var(--xcoord), var(--ycoord)) rotate(0deg);
 }
 
 #Polyquity {
+  --i: 4;
   background-color: #99d88e;
-  transform: translate(-108.37px, -159.28px) rotate(0deg); 
+  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res))*var(--distance));
+  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res))*var(--distance));
+  transform: translate(var(--xcoord), var(--ycoord)) rotate(0deg);
 }
 
 #Planqueer {
+  --i: 5;
   background-color: #99d88e;
-  transform: translate(-70.30px, -100.09px) rotate(0deg); 
+  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res))*var(--distance));
+  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res))*var(--distance));
+  transform: translate(var(--xcoord), var(--ycoord)) rotate(0deg);
 }
 
 #Queermanence {
+  --i: 6;
   background-color: #99d88e;
-  transform: translate(-70.4px, -29.51px) rotate(0deg); 
+  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res))*var(--distance));
+  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res))*var(--distance));
+  transform: translate(var(--xcoord), var(--ycoord)) rotate(0deg);
 }
 
 #Amnesty {
+  --i: 7;
   background-color: #99d88e;
-  transform: translate(-108.37px, 29.68px) rotate(0deg); 
+  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res))*var(--distance));
+  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res))*var(--distance));
+  transform: translate(var(--xcoord), var(--ycoord)) rotate(0deg);
 }
 
 #EVA {
+  --i: 8;
   background-color: #99d88e;
-  transform: translate(-172.38px, 58.92px) rotate(0deg); 
+  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res))*var(--distance));
+  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res))*var(--distance));
+  transform: translate(var(--xcoord), var(--ycoord)) rotate(0deg);
 }
 
 #Bassenges {
+  --i: 9;
   background-color: #99d88e;
-  transform: translate(-242.40px, 48.95px) rotate(0deg); 
+  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res))*var(--distance));
+  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res))*var(--distance));
+  transform: translate(var(--xcoord), var(--ycoord)) rotate(0deg);
 }
 
 #UPFL {
+  --i: 10;
   background-color: #99d88e;
-  transform: translate(-295.40px, 2.73px) rotate(0deg); 
+  --xcoord: calc(cos(var(--i) * 360deg / var(--nb_res))*var(--distance));
+  --ycoord: calc(-1*sin(var(--i) * 360deg / var(--nb_res))*var(--distance));
+  transform: translate(var(--xcoord), var(--ycoord)) rotate(0deg);
 }
 
 /**fourth category**/
 
+#bubble4 {
+  background-color: #8dc682;
+  transform: translate(-117.56px, 161.80px) rotate(0deg);
+  --nb_res: 5;
+}
+
 /**fifth category**/
 
+#bubble5 {
+  background-color: #80b577;
+  transform: translate(117.56px, 161.80px) rotate(0deg);
+  --nb_res: 5;
+}
 
 #Sports {
-  background-color: #99d88e;
-  transform: translate(230.85px, 108.97px) rotate(0deg); 
-}
-/**
-#Zero {
-  background-color: #99d88e;
-  transform: translate(250px, 160px) rotate(0deg); 
+  background-color: #80b577;
+  --xcoord: calc(cos(30deg)*var(--distance));
+  --ycoord: calc(-1*sin(30deg)*var(--distance));
+  transform: translate(var(--xcoord), var(--ycoord)) rotate(0deg); 
 }
 
-#Ingenieur {
-  background-color: #99d88e;
-  transform: translate(240px, 220px) rotate(0deg); 
+#Transition {
+  background-color: #80b577;
+  --xcoord: calc(cos(0deg)*var(--distance));
+  --ycoord: calc(-1*sin(0deg)*var(--distance));
+  transform: translate(var(--xcoord), var(--ycoord)) rotate(0deg); 
 }
 
-#Polyquity {
-  background-color: #99d88e;
-  transform: translate(200px, 270px) rotate(0deg); 
+#TSN {
+  background-color: #80b577;
+  --xcoord: calc(cos(-30deg)*var(--distance));
+  --ycoord: calc(-1*sin(-30deg)*var(--distance));
+  transform: translate(var(--xcoord), var(--ycoord)) rotate(0deg); 
 }
-**/
+
+#Meditation {
+  background-color: #80b577;
+  --xcoord: calc(cos(-60deg)*var(--distance));
+  --ycoord: calc(-1*sin(-60deg)*var(--distance));
+  transform: translate(var(--xcoord), var(--ycoord)) rotate(0deg); 
+}
+
+#Forest {
+  background-color: #80b577;
+  --xcoord: calc(cos(-90deg)*var(--distance));
+  --ycoord: calc(-1*sin(-90deg)*var(--distance));
+  transform: translate(var(--xcoord), var(--ycoord)) rotate(0deg); 
+}
